[PAT] [Basic] [Java] 1018